{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 147,
  "lineage": "fd1cf034-928a-1397-9e4a-0ba2efc88fd4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc07b3fa06daf71b",
            "arn": "arn:aws:ec2:us-east-1:397546002821:elastic-ip/eipalloc-0cc07b3fa06daf71b",
            "association_id": "eipassoc-0dddc8d882c1786e8",
            "domain": "vpc",
            "id": "eipalloc-0cc07b3fa06daf71b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00ed034e40bd18d6f",
            "private_dns": "ip-10-0-2-178.ec2.internal",
            "private_ip": "10.0.2.178",
            "public_dns": "ec2-52-54-157-129.compute-1.amazonaws.com",
            "public_ip": "52.54.157.129",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "dono": " Jorge",
              "projeto": "ada"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013056d4bfdbd50eb",
            "arn": "arn:aws:ec2:us-east-1:397546002821:elastic-ip/eipalloc-013056d4bfdbd50eb",
            "association_id": "eipassoc-0cbddc83c5f4b460e",
            "domain": "vpc",
            "id": "eipalloc-013056d4bfdbd50eb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0158c5425be94c439",
            "private_dns": "ip-10-0-3-214.ec2.internal",
            "private_ip": "10.0.3.214",
            "public_dns": "ec2-52-1-120-120.compute-1.amazonaws.com",
            "public_ip": "52.1.120.120",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "dono": " Jorge",
              "projeto": "ada"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a83dc3a73909feea",
            "arn": "arn:aws:ec2:us-east-1:397546002821:elastic-ip/eipalloc-0a83dc3a73909feea",
            "association_id": "eipassoc-03770f4195e95a6c1",
            "domain": "vpc",
            "id": "eipalloc-0a83dc3a73909feea",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07387e35747573cac",
            "private_dns": "ip-10-0-4-209.ec2.internal",
            "private_ip": "10.0.4.209",
            "public_dns": "ec2-44-208-104-86.compute-1.amazonaws.com",
            "public_ip": "44.208.104.86",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "dono": " Jorge",
              "projeto": "ada"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d43db0594b521b",
            "arn": "arn:aws:ec2:us-east-1:397546002821:instance/i-03c9e09eb55cc8df9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c9e09eb55cc8df9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbc27c85ab2603ee",
            "private_dns": "ip-10-0-5-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "dono": " Jorge",
                  "projeto": "ada"
                },
                "tags_all": {
                  "dono": " Jorge",
                  "projeto": "ada"
                },
                "throughput": 125,
                "volume_id": "vol-052e27d939181d641",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b7ec4ceebf61ccc9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c2b9c45b3402318",
            "tags": {
              "Name": "private-ec2-a"
            },
            "tags_all": {
              "Name": "private-ec2-a",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7ec4ceebf61ccc9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.privada-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d43db0594b521b",
            "arn": "arn:aws:ec2:us-east-1:397546002821:instance/i-01bd54fa0adaa366b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bd54fa0adaa366b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017504baf6d4be896",
            "private_dns": "ip-10-0-6-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "dono": " Jorge",
                  "projeto": "ada"
                },
                "tags_all": {
                  "dono": " Jorge",
                  "projeto": "ada"
                },
                "throughput": 125,
                "volume_id": "vol-0ac0fd4bc52416a7a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b7ec4ceebf61ccc9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063c4d4c7af7d5571",
            "tags": {
              "Name": "private-ec2-b"
            },
            "tags_all": {
              "Name": "private-ec2-b",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7ec4ceebf61ccc9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.privada-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d43db0594b521b",
            "arn": "arn:aws:ec2:us-east-1:397546002821:instance/i-0be290e4c86464b09",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be290e4c86464b09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048b472eaab58a665",
            "private_dns": "ip-10-0-7-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "dono": " Jorge",
                  "projeto": "ada"
                },
                "tags_all": {
                  "dono": " Jorge",
                  "projeto": "ada"
                },
                "throughput": 125,
                "volume_id": "vol-035d12422f9c0162b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b7ec4ceebf61ccc9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ab4f49cdbb9e08a",
            "tags": {
              "Name": "private-ec2-c"
            },
            "tags_all": {
              "Name": "private-ec2-c",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7ec4ceebf61ccc9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.privada-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-ada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:internet-gateway/igw-093414af3a56bba74",
            "id": "igw-093414af3a56bba74",
            "owner_id": "397546002821",
            "tags": {
              "Name": "gateway-ada"
            },
            "tags_all": {
              "Name": "gateway-ada",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:397546002821:loadbalancer/app/load-balancer/bdb35d73aa5d4e34",
            "arn_suffix": "app/load-balancer/bdb35d73aa5d4e34",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-378320056.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:397546002821:loadbalancer/app/load-balancer/bdb35d73aa5d4e34",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0948464a98630e01e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01216bc699ce5f782"
              },
              {
                "subnet_id": "subnet-03197e8ef475e7332"
              },
              {
                "subnet_id": "subnet-07965add261883511"
              }
            ],
            "subnets": [
              "subnet-01216bc699ce5f782",
              "subnet-03197e8ef475e7332",
              "subnet-07965add261883511"
            ],
            "tags": {
              "Name": "load-balancer"
            },
            "tags_all": {
              "Name": "load-balancer",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_route_table.route-public",
            "aws_route_table_association.publica-a",
            "aws_route_table_association.publica-b",
            "aws_route_table_association.publica-c",
            "aws_security_group.allow_lb",
            "aws_subnet.publica-a",
            "aws_subnet.publica-b",
            "aws_subnet.publica-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:397546002821:targetgroup/load-balancer-target-group/225f32899f198e14",
            "arn_suffix": "targetgroup/load-balancer-target-group/225f32899f198e14",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:397546002821:targetgroup/load-balancer-target-group/225f32899f198e14",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "load-balancer-target-group",
            "port": 80,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "dono": " Jorge",
              "projeto": "ada"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "i-06f6022bbe92e427f",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:397546002821:targetgroup/load-balancer-target-group/225f32899f198e14-20241114222223904700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:397546002821:targetgroup/load-balancer-target-group/225f32899f198e14",
            "target_id": "i-06f6022bbe92e427f"
          },
          "dependencies": [
            "aws_lb_target_group.lb_target_group",
            "data.aws_instances.current_instances"
          ]
        },
        {
          "index_key": "i-09b6ab36e8fc608ef",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:397546002821:targetgroup/load-balancer-target-group/225f32899f198e14-20241114222223860500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:397546002821:targetgroup/load-balancer-target-group/225f32899f198e14",
            "target_id": "i-09b6ab36e8fc608ef"
          },
          "dependencies": [
            "aws_lb_target_group.lb_target_group",
            "data.aws_instances.current_instances"
          ]
        },
        {
          "index_key": "i-0c674fcada2154b3b",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:397546002821:targetgroup/load-balancer-target-group/225f32899f198e14-20241114222223922700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:397546002821:targetgroup/load-balancer-target-group/225f32899f198e14",
            "target_id": "i-0c674fcada2154b3b"
          },
          "dependencies": [
            "aws_lb_target_group.lb_target_group",
            "data.aws_instances.current_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc07b3fa06daf71b",
            "association_id": "eipassoc-0dddc8d882c1786e8",
            "connectivity_type": "public",
            "id": "nat-0e324ea526ca806c6",
            "network_interface_id": "eni-00ed034e40bd18d6f",
            "private_ip": "10.0.2.178",
            "public_ip": "52.54.157.129",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03197e8ef475e7332",
            "tags": {
              "Name": "NAT-A"
            },
            "tags_all": {
              "Name": "NAT-A",
              "dono": " Jorge",
              "projeto": "ada"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_a",
            "aws_internet_gateway.gw-ada",
            "aws_subnet.publica-a",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013056d4bfdbd50eb",
            "association_id": "eipassoc-0cbddc83c5f4b460e",
            "connectivity_type": "public",
            "id": "nat-0e8c98b128637f4ff",
            "network_interface_id": "eni-0158c5425be94c439",
            "private_ip": "10.0.3.214",
            "public_ip": "52.1.120.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01216bc699ce5f782",
            "tags": {
              "Name": "NAT-B"
            },
            "tags_all": {
              "Name": "NAT-B",
              "dono": " Jorge",
              "projeto": "ada"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.gw-ada",
            "aws_subnet.publica-b",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a83dc3a73909feea",
            "association_id": "eipassoc-03770f4195e95a6c1",
            "connectivity_type": "public",
            "id": "nat-01b3104a5038dad5a",
            "network_interface_id": "eni-07387e35747573cac",
            "private_ip": "10.0.4.209",
            "public_ip": "44.208.104.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07965add261883511",
            "tags": {
              "Name": "NAT-C"
            },
            "tags_all": {
              "Name": "NAT-C",
              "dono": " Jorge",
              "projeto": "ada"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_c",
            "aws_internet_gateway.gw-ada",
            "aws_subnet.publica-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "banco",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:route-table/rtb-0ddbf3ef010838ca3",
            "id": "rtb-0ddbf3ef010838ca3",
            "owner_id": "397546002821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "dono": " Jorge",
              "projeto": "ada"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privada-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:route-table/rtb-0b5e16a731b6c904e",
            "id": "rtb-0b5e16a731b6c904e",
            "owner_id": "397546002821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e324ea526ca806c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "route-table-privada-a"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "route-table-privada-a",
              "projeto": "ada"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat_a",
            "aws_internet_gateway.gw-ada",
            "aws_nat_gateway.nat_gateway_a",
            "aws_subnet.publica-a",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privada-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:route-table/rtb-0ec30330a48beeeb9",
            "id": "rtb-0ec30330a48beeeb9",
            "owner_id": "397546002821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e8c98b128637f4ff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "route-table-privada-b"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "route-table-privada-b",
              "projeto": "ada"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.gw-ada",
            "aws_nat_gateway.nat_gateway_b",
            "aws_subnet.publica-b",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privada-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:route-table/rtb-028641ff38f6ef07f",
            "id": "rtb-028641ff38f6ef07f",
            "owner_id": "397546002821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b3104a5038dad5a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "route-table-privada-c"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "route-table-privada-c",
              "projeto": "ada"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat_c",
            "aws_internet_gateway.gw-ada",
            "aws_nat_gateway.nat_gateway_c",
            "aws_subnet.publica-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:route-table/rtb-0905c36e2b01fba21",
            "id": "rtb-0905c36e2b01fba21",
            "owner_id": "397546002821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-093414af3a56bba74",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "dono": " Jorge",
              "projeto": "ada"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d80a43ff0ef891b",
            "route_table_id": "rtb-0b5e16a731b6c904e",
            "subnet_id": "subnet-08c2b9c45b3402318"
          },
          "dependencies": [
            "aws_eip.eip_nat_a",
            "aws_internet_gateway.gw-ada",
            "aws_nat_gateway.nat_gateway_a",
            "aws_route_table.privada-a",
            "aws_subnet.privada-a",
            "aws_subnet.publica-a",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019f491273c2e3cd8",
            "route_table_id": "rtb-0ec30330a48beeeb9",
            "subnet_id": "subnet-063c4d4c7af7d5571"
          },
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.gw-ada",
            "aws_nat_gateway.nat_gateway_b",
            "aws_route_table.privada-b",
            "aws_subnet.privada-b",
            "aws_subnet.publica-b",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025fbe391f48a135f",
            "route_table_id": "rtb-028641ff38f6ef07f",
            "subnet_id": "subnet-02ab4f49cdbb9e08a"
          },
          "dependencies": [
            "aws_eip.eip_nat_c",
            "aws_internet_gateway.gw-ada",
            "aws_nat_gateway.nat_gateway_c",
            "aws_route_table.privada-c",
            "aws_subnet.privada-c",
            "aws_subnet.publica-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dados-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d13dfb5aa172eb1",
            "route_table_id": "rtb-0ddbf3ef010838ca3",
            "subnet_id": "subnet-0ba327940adb10543"
          },
          "dependencies": [
            "aws_route_table.banco",
            "aws_subnet.dados-a",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dados-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0823dd3dcf3747c65",
            "route_table_id": "rtb-0ddbf3ef010838ca3",
            "subnet_id": "subnet-06392a7ee7431fd89"
          },
          "dependencies": [
            "aws_route_table.banco",
            "aws_subnet.dados-b",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dados-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8dbd880f6c6b2a0",
            "route_table_id": "rtb-0ddbf3ef010838ca3",
            "subnet_id": "subnet-00d417eab700b0e20"
          },
          "dependencies": [
            "aws_route_table.banco",
            "aws_subnet.dados-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9440c36c781e07a",
            "route_table_id": "rtb-0905c36e2b01fba21",
            "subnet_id": "subnet-03197e8ef475e7332"
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_route_table.route-public",
            "aws_subnet.publica-a",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed187d464d74bb05",
            "route_table_id": "rtb-0905c36e2b01fba21",
            "subnet_id": "subnet-01216bc699ce5f782"
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_route_table.route-public",
            "aws_subnet.publica-b",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bd197388f5235e9",
            "route_table_id": "rtb-0905c36e2b01fba21",
            "subnet_id": "subnet-07965add261883511"
          },
          "dependencies": [
            "aws_internet_gateway.gw-ada",
            "aws_route_table.route-public",
            "aws_subnet.publica-c",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:security-group/sg-0b7ec4ceebf61ccc9",
            "description": "Allow trafiic on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7ec4ceebf61ccc9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "397546002821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:security-group/sg-0948464a98630e01e",
            "description": "Allow trafiic http ",
            "egress": [],
            "id": "sg-0948464a98630e01e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_lb",
            "name_prefix": "",
            "owner_id": "397546002821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_lb"
            },
            "tags_all": {
              "Name": "allow_lb",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3706888314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0948464a98630e01e",
            "security_group_rule_id": "sgr-0be858ec55e63a901",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_lb",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dados-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:subnet/subnet-0ba327940adb10543",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba327940adb10543",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397546002821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dados-a"
            },
            "tags_all": {
              "Name": "dados-a",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dados-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:subnet/subnet-06392a7ee7431fd89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06392a7ee7431fd89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397546002821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dados-b"
            },
            "tags_all": {
              "Name": "dados-b",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dados-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:subnet/subnet-00d417eab700b0e20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d417eab700b0e20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397546002821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dados-c"
            },
            "tags_all": {
              "Name": "dados-c",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:subnet/subnet-08c2b9c45b3402318",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c2b9c45b3402318",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397546002821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "privada-app-a"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "privada-app-a",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:subnet/subnet-063c4d4c7af7d5571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063c4d4c7af7d5571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397546002821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "privada-app-b"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "privada-app-b",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:subnet/subnet-02ab4f49cdbb9e08a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ab4f49cdbb9e08a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397546002821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "privada-app-c"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "privada-app-c",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:subnet/subnet-03197e8ef475e7332",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03197e8ef475e7332",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397546002821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "publica-a"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "publica-a",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:subnet/subnet-01216bc699ce5f782",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01216bc699ce5f782",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397546002821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "publica-b"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "publica-b",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:subnet/subnet-07965add261883511",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07965add261883511",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397546002821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "publica-c"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "publica-c",
              "projeto": "ada"
            },
            "vpc_id": "vpc-02eebb83e4a841bf9"
          },
          "dependencies": [
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ada_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:vpc/vpc-02eebb83e4a841bf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-095c88dafc8b7e70e",
            "default_route_table_id": "rtb-0351ff9f935c695af",
            "default_security_group_id": "sg-0c4ee1a69177378bb",
            "dhcp_options_id": "dopt-006ccbd98288a91e0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02eebb83e4a841bf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0351ff9f935c695af",
            "owner_id": "397546002821",
            "tags": {
              "name": "terraform-ada",
              "vpc": "ada"
            },
            "tags_all": {
              "dono": " Jorge",
              "name": "terraform-ada",
              "projeto": "ada",
              "vpc": "ada"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:security-group-rule/sgr-0c5c7f377a83acf50",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c5c7f377a83acf50",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b7ec4ceebf61ccc9",
            "security_group_rule_id": "sgr-0c5c7f377a83acf50",
            "tags": {
              "Name": "allow_all_egress"
            },
            "tags_all": {
              "Name": "allow_all_egress",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397546002821:security-group-rule/sgr-0f45029136fd86aef",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f45029136fd86aef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b7ec4ceebf61ccc9",
            "security_group_rule_id": "sgr-0f45029136fd86aef",
            "tags": {
              "Name": "allow_http_rule"
            },
            "tags_all": {
              "Name": "allow_http_rule",
              "dono": " Jorge",
              "projeto": "ada"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.ada_vpc"
          ]
        }
      ]
    }
  ]
}